# capstoneProject2026

./: .gitignore  Cover.csv  Federal_laws.csv  Incident.csv  Project_Ouline.md  Public v4.1 K-12 School Shooting Database (8 28 2025) (2).xlsx  README.md  Shooter.csv  Victim.csv  Weapon.csv  backgound_check.xlsx  bias_analysis.txt  child_access_laws.xlsx  example_test.ipynb  firearm_laws.xlsx  firearm_sales_restrictions.xlsx  firearms_k-12_edu_settings.xlsx  giffords_state_laws_all.csv  local_preempted_by_state.xlsx  main.py  manim.cfg  minimum_age.xlsx  permit_to_purchase.xlsx  prohibited_possessor.xlsx  project starter outline.txt  pyproject.toml  registration.xlsx  req_report_of_lost_stolen_firearm.xlsx  safety_training_req.xlsx  waiting_period.xlsx
notebooks/: 01_data_access.ipynb  02_data_preparation.ipynb  03_exploratory_analysis.ipynb  04_modeling_or_analysis.ipynb  06_smr_by_state_supabase.ipynb  Research Visuals.ipynb  about_the_data.ipynb  data_conversion.ipynb  data_visualizations_supabase.ipynb  dataset_exploration.ipynb  imageoutput  risk_per_100k.ipynb  risk_per_100k_by_state.ipynb  risk_per_100k_by_state_executed.ipynb  shootings_by_city.ipynb  shootings_exploration.ipynb  supabase_test.ipynb  visual_talking_points.ipynb
outputs/: project_data_overview.html  project_model_summary.html  project_population_bias.html
presentation_data_section/: README.md  corrected_dc_fact_check.txt  corrected_dc_slide_notes.md  final_slide_deck.md  presentation_notes.md  presentation_report.md  project_review_basis.md
src/: build_corrected_dc_presentation.py  test.py  (+13 more)
(+15 files in other folders)
